success message added on click

--- a/app/src/main/res/layout/fragment_login_screen.xml
+++ b/app/src/main/res/layout/fragment_login_screen.xml
@@ -22,7 +22,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="24dp"
+        android:paddingTop="24dp"
         android:paddingHorizontal="46sp">
 
         <androidx.appcompat.widget.AppCompatTextView
